public/stylesheets/default.css
/* ... */
#footer_container a:hover { color: #ffffff; }
#footer_container a:active { color: #ffffff; }
.status_yellow { color: #cccc33; }
.status_green { color: #33cc33; }
.status_red { color: #cc3333; }
.list { list-style: none; }
.list li {
  border-bottom: 1px dashed #cccccc;
  padding: 10px 0;
}
.list li.conversation h3 { margin: 0; }
.pagination {
  margin: 10px 0;
  background: white;
}
.pagination a {
  padding: 0.2em 0.5em;
  display: block;
  float: left;
  margin-right: 1px;
}
.pagination span {
  padding: 0.2em 0.5em;
  display: block;
  float: left;
  margin-right: 1px;
}
.pagination span.disabled {
  color: #999999;
  border: 1px solid #dddddd;
}
.pagination span.current {
  font-weight: bold;
  background: #b3e4ef;
  color: #3366cc;
  border: 1px solid #3366cc;
}
.pagination a {
  text-decoration: none;
  color: #105cb6;
  border: 1px solid #9aafe5;
}
.pagination a:hover {
  color: #3366cc;
  background: #b3e4ef;
  border-color: #3366cc;
}
.pagination a:focus {
  color: #3366cc;
  background: #b3e4ef;
  border-color: #3366cc;
}
.pagination:after {
  content: ".";
  display: block;
  height: 0;
  clear: both;
  visibility: hidden;
}
* html .pagination { height: 1%; }
*:first-child + html .pagination { overflow: hidden; }
.msgcount {
  background: #cc3333;
  padding: 2px 4px;
  font-weight: bold;
  color: #ffffff;
  margin-right: 5px;
}
.mutedmsgcount {
  background: #999999 url(/images/b9.gif) bottom center no-repeat;
  padding: 2px 4px 6px 4px;
  font-weight: bold;
  color: #ffffff;
  margin-left: 10px;
}
#working {
  position: absolute;
  top: -18px;
  left: 255px;
}
#users_list {
  float: left;
  width: 100%;
}
#users_list li {
  float: left;
  width: 49%;
  margin-bottom: 10px;
  margin-left: 2px;
  padding: 10px 0;
  border: 1px solid #eeeeee;
}
#users_list li .avatar {
  float: left;
  padding-left: 5px;
}
#users_list li .username {
  padding-left: 60px;
  display: block;
}
#users_list li .user_real_name {
  padding-left: 60px;
  display: block;
  color: #999999;
}
input[type='text'], input[type='password'], textarea {
  font-size: 100%;
  font-family: helvetica, "microsoft sans serif", arial, sans-serif;
}
.img_attachment img {
  border: 1px solid #cccccc;
  padding: 10px;
  margin: 10px auto;
}
.tag {
  border: 1px solid #85c5d2;
  background: #d0e4eb;
  color: #3366cc;
  margin-right: 3px;
  padding: 0px 2px;
  margin-bottom: 3px;
  display: block;
  float: left;
  line-height: 1em;
}
.tag a:link {
  text-decoration: none;
  color: #3366cc;
}
.tag a:visited {
  text-decoration: none;
  color: #3366cc;
}
.tag_controls a:link {
  color: #cc3333;
  font-size: 85%;
}
.tag_controls a:visited {
  color: #cc3333;
  font-size: 85%;
}
ul.subsection_tabs {
  clear: both;
  height: 20px;
  list-style-image: none;
  list-style-position: outside;
  list-style-type: none;
  margin: 0px;
  padding: 0;
  white-space: nowrap;
  border-bottom: none;
}
ul.subsection_tabs li.tab a.active {
  background-color: #eeeeee;
  color: #111111;
}
ul.subsection_tabs li.tab a:hover {
  color: #000000;
  text-decoration: underline;
}
ul.subsection_tabs li.tab a {
  background-color: #989898;
  color: #ffffff;
  display: block;
  height: 20px;
  padding: 0 4px;
  width: 80px;
  text-decoration: none;
  font-weight: bold;
}
.nube1 { font-size: 1em; }
.nube2 { font-size: 1.2em; }
.nube3 { font-size: 1.4em; }
.nube4 { font-size: 1.6em; }
.nube5 { font-size: 1.8em; }
.nube6 { font-size: 2em; }
#convo_controls { position: relative; }
#convos_links { padding-bottom: 0px; }
.groupdate {
  padding: 16px 0 0 0;
  color: #333333;
  font-weight: bold;
  font-size: 130%;
  background: url("/images/bl_gray_corner.gif") top left no-repeat;
}
.groupdate span {
  border-top: 1px solid #a7a7a7;
  display: block;
  padding: 10px 0 0 10px;
}
.last-read {
  color: #ffffff;
  background: #ff0000 url("/images/icons/little-down-arrow.gif") right no-repeat;
  display: inline;
  font-weight: bold;
  padding: 0 12px 0 5px;
}
.twitter_like_username {
  color: #3366cc;
  font-family: 'Lucida Grande';
}
.menu_separator {
  color: #b3e4ef;
  border-right: 2px solid #b3e4ef;
}
#multilingual {
  float: left;
  margin-right: 5px;
}
#multilingual form {
  margin: 0;
  padding: 0;
}
.round {
  -moz-border-radius: 5px;
  -webkit-border-radius: 5px;
}
#convo_header_container {
  z-index: 100;
  background: #cccccc;
  color: #ffffff;
  border-bottom: 2px solid #999999;
}
#convo_header {
  overflow: hidden;
  width: 550px;
  margin: 0 auto;
  background: #666666;
  -moz-border-radius-topleft: 5px;
  -webkit-border-top-left-radius: 5px;
  -moz-border-radius-topright: 5px;
  -webkit-border-top-right-radius: 5px;
}
#convo_header h5 {
  margin: 0px;
  padding: 0;
  font-size: 100%;
  font-weight: normal;
}
#convo_header h5 img {
  margin: 0px;
  display: inline;
}
#convo_header h5 a:link {
  color: #ffffff;
  padding: 0px;
  text-decoration: none;
}
#convo_header h5 a:visited {
  color: #ffffff;
  padding: 0px;
  text-decoration: none;
}
.padding05 { padding: 0 5px; }
#convo_tools {
  color: #999999;
  padding: 0px;
  background: #eeeeee;
}
#convo_tools #filter {
  float: right;
  margin: 0;
  padding: 0;
}
#convo_tools #filter form {
  margin: 0;
  padding: 0;
}
#convo_owner {
  position: absolute;
  right: 2px;
  top: 6px;
  background: #666666;
  padding: 0px;
  font-size: 90%;
  line-height: 1.2em;
}
#convo_name {
  width: 90%;
  overflow: hidden;
  position: absolute;
  top: 5px;
}
.sbutton {
  background: #666666;
  padding: 0 2px;
  font-weight: bold;
  margin-right: 2px;
  font-size: 90%;
}
.sbutton a:link {
  color: #eeeeee;
  text-decoration: none;
}
.sbutton a:visited {
  color: #eeeeee;
  text-decoration: none;
}
.sbutton a:hover {
  color: #ffffff;
  text-decoration: none;
}
.sbutton a:active {
  color: #ffffff;
  text-decoration: none;
}
#extra_convo_stuff {
  background: #ffffff;
  margin-left: -10px;
  border-left: 1px dashed #cccccc;
  border-bottom: 2px solid #999999;
  border-top: 1px solid #999999;
}
/* ... */

